--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-xml-bodyparser": "^0.3.0",
-    "mongoose": "^4.5.8",
+    "mongoose": ">=5.7.5",
     "morgan": "^1.7.0",
-    "request": "^2.81.0"
+    "request": "latest"
   }
 }
